grammar.js
    module: ($) =>
      seq(
        optional($.package),
        // Imports are not held to the top: a leading `#if ... #end` parses as an
        // expression statement, and imports may still follow it.
        repeat(choice($.import, $.using, $._type_decl, $._expr_statement)),
      ),

    //////////////////////////////////////////////////////////////////////////

    _expr_statement: ($) => seq($._Expr, optional($._semicolon)),

    _Expr: ($) => choice($.EBinop, $.ETernary, $.EUnop, $._expr_postfix),
    cases: ($) => repeat1($.switch_case),
    // `case var x:` binds `x` as a capture. Precedence above a type annotation
    // so the trailing `:` is the case colon, not the start of `var x : T`.
    capture_variable: ($) =>
      prec(PREC.TYPE_ANNOTATION + 1, seq("var", field("name", $._identifier))),
    switch_case: ($) =>
      prec.dynamic(
        -1,
        seq(
          "case",
          field("patterns", commaSep1(choice($._Expr, $.capture_variable))),
          optional(seq("if", "(", field("guard", $._Expr), ")")),
          ":",
          field("body", repeat(seq($._Expr, optional($._semicolon)))),
        ),
      ),
    switch_default: ($) =>
      prec.right(
        1,
        seq(
          choice("default", seq("case", alias($.wildcard_pattern, ""))),
          ":",
          field("body", repeat(seq($._Expr, optional($._semicolon)))),
        ),
      ),
    macro: ($) =>
      prec(
        PREC.MACRO,
        seq(
          "macro",
          choice($._Expr, $.ClassType, $.EnumType, $._type_annotation),
        ),
      ),
    reification: ($) =>
      prec(
        PREC.UNARY,
        choice(
          seq(
            "$",
            choice(
              token.immediate(/[a-zA-Z_][a-zA-Z0-9_]*/), // identifier
              seq(token.immediate("{"), $._Expr, "}"),
            ),
          ),
          seq(token(/\$e\{/), $._Expr, "}"),
          seq(token(/\$a\{/), commaSep($._Expr), "}"),
          seq(
            token(/\$b\{/),
            repeat(seq($._Expr, optional($._semicolon))),
            "}",
          ),
          seq(token(/\$i\{/), $._Expr, "}"),
          seq(token(/\$p\{/), commaSep($._Expr), "}"),
          seq(token(/\$v\{/), $._Expr, "}"),
        ),
      ),

    _type_decl: ($) =>
      seq(
        field("meta", repeat($.MetaDataEntry)),
        choice($.AbstractType, $.ClassType, $.DefType, $.EnumType),
      ),

    true: (_) => "true",
    false: (_) => "false",
    null: (_) => "null",
    _type_annotation: ($) =>
      prec(PREC.TYPE_ANNOTATION, seq(":", field("type", $.ComplexType))),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    _identifier: ($) =>
      choice($.identifier, alias($.dollar_identifier, $.identifier)),
    // `as` is a reserved keyword (used in `import ... as`), but the compiler also
    // accepts it as a plain identifier for fields, methods, variables and calls.
    // (`from`/`to` are not reserved, so they already work as identifiers.)
    type_name: (_) => token(prec(1, /[A-Z][a-zA-Z0-9_]*/)),
    wildcard_pattern: (_) => "_",
    _semicolon: (_) => ";",
