test/corpus/inline_xml.txt
====================
inline XML expressions
====================

var simple = <xml />;
var nested = <root><child value="x" /></root>;
var withExpr = <something onClick={e -> e.preventDefault()} />;
consume(<node />, after);

---

(module
  (EVars
    (identifier)
    (InlineXml))
  (EVars
    (identifier)
    (InlineXml))
  (EVars
    (identifier)
    (InlineXml))
  (ECall
    (identifier)
    (InlineXml)
    (identifier)))

====================
inline XML fragments and special name starts
====================

var frag = <></>;
var fragChildren = <><a /><b /></>;
var dollarTag = <$Foo />;
var nsTag = <ns:tag attr="v" />;
var underscore = <_priv />;

---

(module
  (EVars
    (identifier)
    (InlineXml))
  (EVars
    (identifier)
    (InlineXml))
  (EVars
    (identifier)
    (InlineXml))
  (EVars
    (identifier)
    (InlineXml))
  (EVars
    (identifier)
    (InlineXml)))

====================
inline XML root-tag depth and no string balancing
====================

f(<xml><xml></xml></xml>);
f(<xml><yml></xml>);
f(<xml-xml></xml-xml>);
f(<xml a=" </xml>);
f(<xml a=// </xml>);
var after = ok;

---

(module
  (ECall
    (identifier)
    (InlineXml))
  (ECall
    (identifier)
    (InlineXml))
  (ECall
    (identifier)
    (InlineXml))
  (ECall
    (identifier)
    (InlineXml))
  (ECall
    (identifier)
    (InlineXml))
  (EVars
    (identifier)
    (identifier)))

====================
inline XML with a very long tag name
====================

f(<aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa></aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa>);
var after = ok;

---

(module
  (ECall
    (identifier)
    (InlineXml))
  (EVars
    (identifier)
    (identifier)))

====================
type arguments with a comma are not inline XML
====================

class A {
	@:from private static function fromFunction<T:Function>(v:T):ERegAbs<T, ~//> return cast v;
	function f() {
		var r:E<T, ~/a/> = null;
	}
}

---

(module
  (ClassType
    (type_name)
    (MetaDataEntry
      (identifier))
    (ClassMethod
      (identifier)
      (TypeParameter
        (type_name)
        (ComplexType
          (TypePath
            (type_name))))
      (FunctionArg
        (identifier)
        (ComplexType
          (TypePath
            (type_name))))
      (ComplexType
        (TypePath
          (type_name)
          (ComplexType
            (TypePath
              (type_name)))
          (Regexp)))
      (EReturn
        (ECast
          (identifier))))
    (ClassMethod
      (identifier)
      (EBlock
        (EVars
          (identifier)
          (ComplexType
            (TypePath
              (type_name)
              (ComplexType
                (TypePath
                  (type_name)))
              (Regexp)))
          (null))))))
